[workspace]
members = [
    "common",
    "ufs",
    "vfs",
    "metadata",
    "server",
    "command",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Arustio Contributors"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/Arustio"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Object storage
object_store = { version = "0.12.4", features = ["aws", "gcp", "azure"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Distributed consensus
openraft = { version = "0.9", features = ["serde"] }
raft = "0.7"

# Storage
rocksdb = "0.24.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
tonic = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
prost-wkt-types = "0.7.0"

# Utilities
bytes = "1.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
