[package]
name = "arustio"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Arustio Contributors"]
license = "Apache-2.0"
repository = "https://github.com/yourusername/Arustio"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = "0.1"

# Object storage
object_store = { version = "0.12.4", features = ["aws", "gcp", "azure"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Distributed consensus
openraft = { version = "0.9", features = ["serde"] }
raft = "0.7"

# Storage
rocksdb = "0.24.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.1.3"

# Networking
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
prost-wkt-types = "0.7.0"
protobuf = "2"

# Utilities
bytes = "1.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

toml = "0.9.8"

arc-swap = "1.8.0"
moka = { version = "0.12.12", features = ["future"] }


clap = { version = "4.5", features = ["derive"] }
tokio-util = "0.7.18"




[build-dependencies]
tonic-prost-build = "0.14.2"
