[package]
name = "command"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "arustio"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-stream = "0.1"
anyhow = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

common = { path = "../common" }
ufs = { path = "../ufs" }
