[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
prost-types = { workspace = true }
toml = "0.9.8"
tonic-prost = "0.14.2"
tokio = { workspace = true }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
