[package]
name = "metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common" }
ufs = { path = "../ufs" }
openraft = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
raft = { workspace = true }
protobuf = "2.28"
