[package]
name = "ufs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common" }
object_store = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
url = "2.5"
futures = "0.3"
tokio-util = "0.7"
