[package]
name = "vfs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common" }
ufs = { path = "../ufs" }
metadata = { path = "../metadata" }
tokio = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
moka = { version = "0.12", features = ["future"] }
rand = "0.8"
arc-swap = "1.7.1"
prost-types = { workspace = true }
async-stream = "0.3"
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"